# pyzh2en

./: .gitignore  LICENSE  README.md  pyproject.toml  tutorial.ipynb
pyzh2en/: __init__.py  __main__.py
